--- a/wechat/templates/wechat.base.htm
+++ b/wechat/templates/wechat.base.htm
@@ -38,7 +38,7 @@
 {% if user.is_superuser %}
                     <a href="{% url 'admin:index' %}" target="_blank">站点管理</a>
 {% endif %}
-                    <a href="{% url 'order:queryOrd' %}">订单查询</a>
+                    <a href="{% url 'wechat:queryOrd' %}">订单查询</a>
                     <a href="{% url 'cart:cart' %}">购物车</a>
 {% if user.is_authenticated %}
                     <a href="{% url 'account:myOrd' %}">我的订单（ {{ user.newOrd|default:0 }} ）</a>
