--- a/wechat/templates/wechat.base.htm
+++ b/wechat/templates/wechat.base.htm
@@ -1,95 +1,48 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-        <title>{% block title %}{% if request.title %}{{ request.title }} {% endif %}{% endblock %} 31客 - 源自欧洲经典口味！</title>
-        <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
-        <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
-        <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" />
-        <link href="{{ STATIC_URL }}wechat/css/css.css" rel="stylesheet" type="text/css" />
-        <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.zebra_datepicker.css" />
-        <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.debug.css" />
-        <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.jgd.dropdown.min.css" />
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.min.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.scrollLoading-min.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.zebra_datepicker.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.dialog.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.debug.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.jgd.dropdown.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}shop/js/comm.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}shop/js/base.configuration.js"></script>
-        <script type="text/javascript">
-            var csrf = "{% csrf_token %}";
-            $(document).ready(function() {
-                {% block javascript %}{% endblock %}
-            });
-        </script>
-        {% block js %}{% endblock %}
-    </head>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>{% block title %}{% if request.title %}{{ request.title }} {% endif %}{% endblock %} 31客 - 源自欧洲经典口味！</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
+    <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
+    <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" />
+    <link href="{{ STATIC_URL }}wechat/css/css.css" rel="stylesheet" type="text/css" />
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap.min.css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="http://cdn.bootcss.com/html5shiv/3.7.0/html5shiv.min.js"></script>
+        <script src="http://cdn.bootcss.com/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
     <body>
-        <div id="tb">
-            <dl id="bar">
-                <dt>Tel：4000-5927-31</dt>
-                <dd>
-{% if user.is_staff %}
-                    <a href="{% url 'office:office' %}" target="_blank">管理中心</a>
-{% endif %}
-{% if user.is_superuser %}
-                    <a href="{% url 'admin:index' %}" target="_blank">站点管理</a>
-{% endif %}
-                    <a href="{% url 'wechat:queryOrd' %}">订单查询</a>
-                    <a href="{% url 'cart:cart' %}">购物车</a>
-{% if user.is_authenticated %}
-                    <a href="{% url 'account:myOrd' %}">我的订单（ {{ user.newOrd|default:0 }} ）</a>
-                    <a href="{% url 'account:logout' %}">登出</a>
-{% else %}
-                    <a href="{% url 'account:login' %}">登录</a>
-{% endif %}
-                </dd>
-                <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
-            </dl>
+      <div id="top">
+        <div class="jumbotron">
+          <img src="{{ STATIC_URL }}images/logo.gif" alt="31kecake"  class="img-rounded"/>
+          <h1>Tel：4000-5927-31</h1>
         </div>
-        <div id="main">
-            <div id="top">
-                <dl class="mti" id="logo">
-                    <dt><a href="{% url 'shop:shop' %}" title="31客"><img src="{{ STATIC_URL }}images/logo.gif" alt="" width="80px" height="75px" /></a></dt>
-                    <dd></dd>
-                </dl>
-                <ul class="menu">
-                    <li>
-                        <a href="{% url 'wechat:wechatShowTag' 'cake' %}">蛋糕</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'wechat:wechatShowTag' 'cookie' %}">曲奇</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'wechat:wechatShowTag' 'chocolate' %}">巧克力</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'wechat:wechatShowTag' 'pie' %}">派</a>
-                    </li>
-                </ul>
-            </div>
-            <div id="middle">
-{% if messages %}
-        <ul class="messagelist">
-{% for i in messages %}
-            <li class="{{ i.tags }} bline">{{ i|striptags }}</li>
-{% endfor %}
-        </ul>
-{% endif %}
-{% block middle %}{% endblock %}
-                <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
-            </div>
-            <div id="ft">
-                <dl id="foot">
-                    <dt><a href="{% url 'article:about' %}">关于31客</a></dt>
-                    <dd>Tel：0771-5676920 0771-5676753</dd>
-                    <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
-                </dl>
-            </div>
-            <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
-        </div>
-    </body>
+      </div>
+      <div id="container">
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+      </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
+  </body>
 </html>
