--- a/wechat/templates/wechattag.htm
+++ b/wechat/templates/wechattag.htm
@@ -1,12 +1,22 @@
 {% extends "wechat.base.htm" %}
 
-{% block title %}{{ tag }} {% endblock %}
-
-{% block js %}
-    <script type="text/javascript" src="{{ STATIC_URL }}tag/js/tag.configuration.js"></script>
-{% endblock %}
 
 {% block middle %}
+      <div id="container">
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+        <div class="col-xs-12">.col-xs-12</div>
+      </div>
+
         <ul class="pinBox">
 {% for i in items %}
          <li class="mb30 item">
