--- a/shop/templates/shop.base.htm
+++ b/shop/templates/shop.base.htm
@@ -28,37 +28,36 @@
         {% block js %}{% endblock %}
     </head>
     <body>
-        <div id="tb">
-            <dl id="bar">
-                <dt>Tel：4000-5927-31</dt>
-                <dd>
-{% if user.is_staff %}
-                    <a href="{% url 'office:office' %}" target="_blank">管理中心</a>
-{% endif %}
-{% if user.is_superuser %}
-                    <a href="{% url 'admin:index' %}" target="_blank">站点管理</a>
-{% endif %}
-                    <a href="{% url 'order:queryOrd' %}">订单查询</a>
-                    <a href="{% url 'cart:cart' %}">购物车</a>
-{% if user.is_authenticated %}
-                    <a href="{% url 'account:myOrd' %}">我的订单（ {{ user.newOrd|default:0 }} ）</a>
-                    <a href="{% url 'account:logout' %}">登出</a>
-{% else %}
-                    <a href="{% url 'account:login' %}">登录</a>
-{% endif %}
-                </dd>
-                <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
-            </dl>
-        </div>
         <div id="main">
             <div id="top">
                 <dl class="mti" id="logo">
-                    <dt><a href="{% url 'shop:shop' %}" title="31客"><img src="{{ STATIC_URL }}images/logo.gif" alt="" width="80px" height="75px" /></a></dt>
-                    <dd></dd>
+                    <dt><a href="{% url 'shop:shop' %}" title="31客"><img src="{{ STATIC_URL }}images/logo.gif" alt="" /></a></dt>
+                    <dd>
+{% if user.is_staff %}
+                        <a href="{% url 'office:office' %}" target="_blank">管理中心</a>
+{% endif %}
+{% if user.is_superuser %}
+                        <a href="{% url 'admin:index' %}" target="_blank">站点管理</a>
+{% endif %}
+                        <a href="{% url 'order:queryOrd' %}">订单查询</a>
+                        <a href="{% url 'cart:cart' %}">购物车</a>
+{% if user.is_authenticated %}
+                        <a href="{% url 'account:myOrd' %}">我的订单（ {{ user.newOrd|default:0 }} ）</a>
+                        <a href="{% url 'account:logout' %}">登出</a>
+{% else %}
+                        <a href="{% url 'account:login' %}">登录</a>
+{% endif %}
+                    </dd>
                 </dl>
+            </div>
+            <div id="sl">
+                <div id="note">我就爱吃</div>
+                <div id="tel">Tel: 4000-5927-31</div>
+            </div>
+            <div id="nav">
                 <ul class="menu">
                     <li>
-                        <a href="{% url 'shop:shop' %}#logo">首页</a>
+                        <a href="{% url 'shop:shop' %}">首页</a>
                     </li>
                     <li>
                         <a href="{% url 'tag:tagShow' 'cake' %}">蛋糕</a>
