--- a/tag/templates/tag.htm
+++ b/tag/templates/tag.htm
@@ -42,7 +42,8 @@
 {% endblock %}
 
 {% block javascript %}
-  $('.styp').each(function(){
-    $(this).sides()
-  });
+    t.buy().like();
+    $('.styp').each(function() {
+        $(this).sides()
+    });
 {% endblock %}
