--- a/shop/templates/shop.base.htm
+++ b/shop/templates/shop.base.htm
@@ -11,21 +11,14 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.zebra_datepicker.css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.debug.css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.jgd.dropdown.min.css" />
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.min.js"></script>
-    {% block js %}{% endblock %}
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.scrollLoading.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.sloadimg.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.zebra_datepicker.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.dialog.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.debug.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.jgd.dropdown.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}shop/js/comm.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.jgd.dropdown.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}shop/js/base.configuration.js"></script>
-    <script type="text/javascript">
-        var csrf = "{% csrf_token %}";
-        $(document).ready(function() {
-            {% block javascript %}{% endblock %}
-        });
-    </script>
+    {% block js %}{% endblock %}
   </head>
   <body>
     <div id="header">
@@ -90,5 +83,22 @@
           });
       </script>
   <![endif]-->
+    <script type="text/javascript">
+        var csrf = "{% csrf_token %}";
+        $(document).ready(function() {
+            $('.date').Zebra_DatePicker({
+                direction: true
+            }); //日期选择控件
+            $('select').jgdDropdown({
+                clsLIExpand: false
+                // selected: 'RS'
+            });
+
+            {% block javascript %}{% endblock %}
+
+
+            $("#middle").sloadimg().loadnow(); //异步加载图片
+        });
+    </script>
   </body>
 </html>
