修正  - 修正前后台某些前端显示错误问题
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/shop/templates/shop.base.htm
+++ b/shop/templates/shop.base.htm
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.zebra_datepicker.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.dialog.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.debug.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.jgd.dropdown.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.jgd.dropdown.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}shop/js/base.configuration.js"></script>
     {% block js %}{% endblock %}
   </head>
