--- a/wechat/templates/wechattag.htm
+++ b/wechat/templates/wechattag.htm
@@ -16,6 +16,20 @@
         <div class="col-xs-12">.col-xs-12</div>
         <div class="col-xs-12">.col-xs-12</div>
       </div>
+        <div class="row">
+          <div class="col-md-1">.col-md-1</div>
+          <div class="col-md-1">.col-md-1</div>
+          <div class="col-md-1">.col-md-1</div>
+          <div class="col-md-1">.col-md-1</div>
+          <div class="col-md-1">.col-md-1</div>
+          <div class="col-md-1">.col-md-1</div>
+          <div class="col-md-1">.col-md-1</div>
+          <div class="col-md-1">.col-md-1</div>
+          <div class="col-md-1">.col-md-1</div>
+          <div class="col-md-1">.col-md-1</div>
+          <div class="col-md-1">.col-md-1</div>
+          <div class="col-md-1">.col-md-1</div>
+        </div>
 
         <ul class="pinBox">
 {% for i in items %}
