--- a/cart/templates/cart.htm
+++ b/cart/templates/cart.htm
@@ -44,14 +44,14 @@
     </table>
     <table width="100%" class="mtb25 tdptd5">
         <tr>
-            <td>是否额外购买生日套装（生日牌/蜡烛）？</td>
-            <td>单价：3元/份</td>
-            <td align="right"><a href="{% url 'cart:buy' 115 %}" class="btn btnbr">是的，我需要增加生日套装</a></td>
+            <td>是否购买生日套装（生日牌/蜡烛）？</td>
+            <td>3元/套</td>
+            <td align="right"><a href="{% url 'cart:buy' 115 %}" class="btn btnbr">是的，我需要购买生日套装</a></td>
         </tr>
         <tr>
-            <td>除按蛋糕规格免费赠送的餐具数量外（详见下面说明），是否额外需要餐具？</td>
-            <td>单价：1元/份</td>
-            <td align="right"><a href="{% url 'cart:buy' 116 %}" class="btn btnbr">是的，我需要增加餐具</a></td>
+            <td>是否购买餐具？</td>
+            <td>1元/套</td>
+            <td align="right"><a href="{% url 'cart:buy' 116 %}" class="btn btnbr">是的，我需要购买餐具</a></td>
         </tr>
     </table>
 </form>
@@ -63,35 +63,36 @@
 <p>&nbsp;</p>
 <p>蛋糕规格及免费配送餐具：</p>
 <table class="ml40">
-    <tr>
-        <td>1.0磅：约14×14(cm)</td>
-        <td>适合2-3人食用</td>
-        <td>免费配送3套餐具</td>
+    <tr><th>规格</th><th>适用人数(人)</th><th>免费赠送(套)</th></tr>
+    <tr align="center">
+        <td>1.0磅</td>
+        <td>2-3</td>
+        <td>3</td>
     </tr>
-    <tr>
-        <td>1.5磅：约16×16(cm)</td>
-        <td>适合5-6人食用</td>
-        <td>免费配送6套餐具</td>
+    <tr align="center">
+        <td>1.5磅</td>
+        <td>5-6</td>
+        <td>6</td>
     </tr>
-    <tr>
-        <td>2.5磅：约20×20(cm)</td>
-        <td>适合8-9人食用</td>
-        <td>免费配送10套餐具</td>
+    <tr align="center">
+        <td>2.5</td>
+        <td>8-9人</td>
+        <td>10</td>
     </tr>
-    <tr>
-        <td>3.5磅：约23×23(cm)</td>
-        <td>适合12-13人食用</td>
-        <td>免费配送15套餐具</td>
+    <tr align="center">
+        <td>3.5磅</td>
+        <td>12-13</td>
+        <td>15</td>
     </tr>
-    <tr>
-        <td>5.5磅：约26×26(cm)</td>
-        <td>适合18-22人食用</td>
-        <td>免费配送25套餐具</td>
+    <tr align="center">
+        <td>5.5磅</td>
+        <td>18-22</td>
+        <td>25</td>
     </tr>
-    <tr>
-        <td>10磅：约36×36(cm)</td>
-        <td>适合35-40人食用</td>
-        <td>免费配送40套餐具</td>
+    <tr align="center">
+        <td>10磅</td>
+        <td>35-40</td>
+        <td>40</td>
     </tr>
 </table>
 <p>订购10磅(含)以上规格的蛋糕请与客服人员联系，订购电话：4000-5927-31</p>
