--- a/shop/templates/shop.base.htm
+++ b/shop/templates/shop.base.htm
@@ -1,8 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% if request.title %}{{ request.title }} {% endif %}{% endblock %} 31客 - 源自欧洲经典口味！</title>
     <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
     <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.zebra_datepicker.css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.debug.css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.jgd.dropdown.min.css" />
+<!--[if lt IE 9]>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/css3-mediaqueries.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/html5.js"></script>
+<![endif]-->
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.sloadimg.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.zebra_datepicker.js"></script>
@@ -21,60 +25,52 @@
     {% block js %}{% endblock %}
   </head>
   <body>
-    <div id="header">
-      <dl>
-        <dt id="logo"><a href="{% url 'shop:shop' %}" title="31客"><img src="{{ STATIC_URL }}images/logo.gif" alt="" /></a></dt>
-        <dd>
+    <header>
+        <menu>
 {% if user.is_staff %}
-          <a href="{% url 'office:office' %}" target="_blank">管理中心</a>
+          <li><a href="{% url 'office:office' %}" target="_blank">管理中心</a></li>
 {% endif %}
 {% if user.is_superuser %}
-          <a href="{% url 'admin:index' %}" target="_blank">站点管理</a>
+          <li><a href="{% url 'admin:index' %}" target="_blank">站点管理</a></li>
 {% endif %}
-          <a href="{% url 'order:queryOrd' %}">订单查询</a>
-          <a href="{% url 'cart:cart' %}">购物车</a>
+          <li><a href="{% url 'order:queryOrd' %}">订单查询</a></li>
+          <li><a href="{% url 'cart:cart' %}">购物车</a></li>
 {% if user.is_authenticated %}
-          <a href="{% url 'account:myOrd' %}">我的订单（ {{ user.newOrd|default:0 }} ）</a>
-          <a href="{% url 'account:logout' %}">登出</a>
+          <li><a href="{% url 'account:myOrd' %}">我的订单（ {{ user.newOrd|default:0 }} ）</a></li>
+          <li><a href="{% url 'account:logout' %}">登出</a></li>
 {% else %}
-          <a href="{% url 'account:login' %}">登录</a>
+          <li><a href="{% url 'account:login' %}">登录</a></li>
 {% endif %}
-        </dd>
-      </dl>
-    </div>
-    <div id="sl">
+        </menu>
+        <div id="logo"><a href="{% url 'shop:shop' %}" title="31客"><img src="{{ STATIC_URL }}images/logo.gif" alt="" /></a></div>
+    </header>
+    <aside id="sl">
       <div id="note">我就爱吃</div>
       <div id="tel">Tel: 4000-5927-31</div>
-    </div>
-    <div id="nav">
-      <ul class="menu">
-        <li><a href="{% url 'shop:shop' %}">首页</a></li>
-        <li><a href="{% url 'tag:tagShow' 'cake' %}">蛋糕</a></li>
-        <li><a href="{% url 'tag:tagShow' 'cookie' %}">曲奇</a></li>
-        <li><a href="{% url 'tag:tagShow' 'chocolate' %}">巧克力</a></li>
-        <li><a href="{% url 'tag:tagShow' 'pie' %}">派</a></li>
-      </ul>
-    </div>
-        <div id="middle">
+    </aside>
+    <nav>
+        <a href="{% url 'shop:shop' %}">首页</a>
+        <a href="{% url 'tag:tagShow' 'cake' %}">蛋糕</a>
+        <a href="{% url 'tag:tagShow' 'cookie' %}">曲奇</a>
+        <a href="{% url 'tag:tagShow' 'chocolate' %}">巧克力</a>
+        <a href="{% url 'tag:tagShow' 'pie' %}">派</a>
+    </nav>
+    <div id="middle">
 {% if messages %}
-    <ul class="messagelist">
+      <ul class="messagelist">
 {% for i in messages %}
-      <li class="{{ i.tags }} bline">{{ i|striptags }}</li>
+        <li class="{{ i.tags }} bline">{{ i|striptags }}</li>
 {% endfor %}
-    </ul>
+      </ul>
 {% endif %}
 {% block middle %}{% endblock %}
-            <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
-        </div>
-        <div id="ft">
-            <dl id="foot">
-                <dt><a href="{% url 'article:about' %}">关于31客</a></dt>
-                <dd>Tel：0771-5676920 0771-5676753</dd>
-                <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
-            </dl>
-        </div>
-        <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
     </div>
+    <footer>
+      <menu>
+        <li><a href="{% url 'article:about' %}">关于31客</a></li>
+      </menu>
+      <em>Tel：0771-5676920 0771-5676753</em>
+    </footer>
   <!--[if IE 6]>
       <script type="text/javascript" src="{{ STATIC_URL }}js/DD_belatedPNG.js"></script>
       <script type="text/javascript">
