--- a/shop/templates/shop.base.htm
+++ b/shop/templates/shop.base.htm
@@ -7,15 +7,17 @@
     <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
     <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
     <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" />
-    <link href="{{ STATIC_URL }}shop/css/css.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet/less" href="{{ STATIC_URL }}shop/css/css.css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.zebra_datepicker.css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.debug.css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.jgd.dropdown.min.css" />
 <!--[if lt IE 9]>
     <script type="text/javascript" src="{{ STATIC_URL }}js/css3-mediaqueries.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/es5-shim.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/html5.js"></script>
 <![endif]-->
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/less-1.5.0.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.sloadimg.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.zebra_datepicker.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.dialog.js"></script>
@@ -26,28 +28,28 @@
   </head>
   <body>
     <header>
-        <menu>
+      <menu>
 {% if user.is_staff %}
-          <li><a href="{% url 'office:office' %}" target="_blank">管理中心</a></li>
+        <li><a href="{% url 'office:office' %}" target="_blank">管理中心</a></li>
 {% endif %}
 {% if user.is_superuser %}
-          <li><a href="{% url 'admin:index' %}" target="_blank">站点管理</a></li>
+        <li><a href="{% url 'admin:index' %}" target="_blank">站点管理</a></li>
 {% endif %}
-          <li><a href="{% url 'order:queryOrd' %}">订单查询</a></li>
-          <li><a href="{% url 'cart:cart' %}">购物车</a></li>
+        <li><a href="{% url 'order:queryOrd' %}">订单查询</a></li>
+        <li><a href="{% url 'cart:cart' %}">购物车</a></li>
 {% if user.is_authenticated %}
-          <li><a href="{% url 'account:myOrd' %}">我的订单（ {{ user.newOrd|default:0 }} ）</a></li>
-          <li><a href="{% url 'account:logout' %}">登出</a></li>
+        <li><a href="{% url 'account:myOrd' %}">我的订单（ {{ user.newOrd|default:0 }} ）</a></li>
+        <li><a href="{% url 'account:logout' %}">登出</a></li>
 {% else %}
-          <li><a href="{% url 'account:login' %}">登录</a></li>
+        <li><a href="{% url 'account:login' %}">登录</a></li>
 {% endif %}
-        </menu>
-        <div id="logo"><a href="{% url 'shop:shop' %}" title="31客"><img src="{{ STATIC_URL }}images/logo.gif" alt="" /></a></div>
+      </menu>
+      <a href="{% url 'shop:shop' %}" title="首页" id="logo"><img src="{{ STATIC_URL }}images/logo.gif" alt="31客" /></a>
+      <aside id="sl">
+        <div id="note">我就爱吃</div>
+        <div id="tel">Tel: 4000-5927-31</div>
+      </aside>
     </header>
-    <aside id="sl">
-      <div id="note">我就爱吃</div>
-      <div id="tel">Tel: 4000-5927-31</div>
-    </aside>
     <nav>
         <a href="{% url 'shop:shop' %}">首页</a>
         <a href="{% url 'tag:tagShow' 'cake' %}">蛋糕</a>
@@ -94,6 +96,7 @@
 
 
             $("#middle").sloadimg().loadnow(); //异步加载图片
+            // alert($(window).width());
         });
     </script>
   </body>
